--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "5.0.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "expo": "35.0.0",
+    "expo-image-manipulator": "7.0.0",
     "expo-image-picker": "7.0.0",
     "expo-mail-composer": "7.0.0",
     "expo-permissions": "7.0.0",
@@ -21,6 +25,10 @@
     "react-native-animatable": "1.3.3",
     "react-native-datepicker": "1.7.2",
     "react-native-elements": "^2.1.0",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-reanimated": "~1.2.0",
+    "react-native-safe-area-context": "~0.3.6",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-swipeout": "2.3.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
